2016/03/03: IGAS v77
    1. Fix Task.NoCombatCall not works well.
    2. Fix Add/remove pet during combat would cause more unit frame to be shown.

2016/03/01: IGAS v76
    1. Fix List Each error.
    2. Fix raid panel's unit frame won't be hidden if the unit not existed.

2016/02/28: IGAS v75
    1. Use IList instead of IFIterator.

2016/02/28: IGAS v74
    1. Fix the Form's auto hide.

2016/02/27: IGAS v73
    1. Update for new PLoop Core.
    2. Fix spell range check for non-existed spell
    3. Imporve the auto-complete for codeeditor.

2015/09/04: IGAS v72
    1. Update for new PLoop Core.
    2. Update features for MultiLineTextBox.

2015/03/12: IGAS v71
    1. BagHandler is added to support bag slot buttons.
    2. Update toc.

2014/12/13: IGAS v70
    1. Fix Task System empty task warning.

2014/11/16: IGAS v69
    1. Trap Launcher spell now works like stance spell.

2014/10/30: IGAS v68
    1. Fix action button can't use hunter traps when Trap Launcher actived.

2014/10/20: IGAS v67
    1. Using GUID to mark the Timer, make sure older call would be stoped.

2014/10/20: IGAS v66
    1. Remove the queue system from the Timer, it's too complex and the error can't be fixed, using the Task.DelayCall for the Timer.

2014/10/20: IGAS v65
    1. Fix a synatx error cause lua error when pick up item.

2014/10/20: IGAS v64
    1. Fix the flyout aciton not work well when reload.

2014/10/19: IGAS v63
    1. The mount wouldn't be usable during combat.

2014/10/18: IGAS v62
    1. Add support to summon random favorite mount spell

2014/10/18: IGAS v61
    1. The Mask will use the target's min & max resize to make sure not errors.

2014/10/18: IGAS v60
    1. Use a more smooth method to handle the mount and toy actions.

2014/10/17: IGAS v58
    1. Fix mount action type, and toy action is added.

2013/11/24: IGAS v56
    1. Fix some mount can't be used in the action system.
    2. Now active layout would be displayed correctly for actived mount.