@@ -1,7 +1,7 @@
 ## Interface: 60200
 ## Title: Lib: IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v77
+## Version: v78
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica
 ## DefaultState: Enabled
